--- a/View/ui/emca.ui
+++ b/View/ui/emca.ui
@@ -216,7 +216,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QGridLayout" name="layoutTools">
+    <layout class="QGridLayout" name="layoutPlugins">
      <property name="sizeConstraint">
       <enum>QLayout::SetMaximumSize</enum>
      </property>
