added cancel button in view render info

--- a/View/ui/render_info.ui
+++ b/View/ui/render_info.ui
@@ -96,11 +96,25 @@
     </layout>
    </item>
    <item>
-    <widget class="QPushButton" name="btnSubmit">
-     <property name="text">
-      <string>Submit</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="btnSubmit">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Submit</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnClose">
+       <property name="text">
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
