--- a/View/ui/render_info.ui
+++ b/View/ui/render_info.ui
@@ -100,7 +100,7 @@
      <item>
       <widget class="QPushButton" name="btnSubmit">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="text">
         <string>Submit</string>
